KB-13847 | Users can still access and complete survey after manual end via notification (#108)
The notifications table stores formId inside message.data[0].formId
rather than the metadata field used by peer_validation_requests.

- extractFormId now falls back to extractFormIdFromMessage when
  metadata is absent, blank, or contains no formId key
- extractFormIdFromMessage extracted as a private helper method
- No interface changes; existing validateAndMarkExpired call site
  in NotificationServiceImpl handles both tables transparently
- Added 8 unit tests covering all fallback paths